5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1716_2505.log
== TEST (2019-05-14 18:01:28) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v = 1
while(v<k):
	calculo = (x**a)/(factorial(a)) - (-a)
	v = v+1
	
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-2.0751677707
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:01:58) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v = 1
while(v<k):
	calculo = (x**a)/(factorial(a)) - (-a)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-7.4293641144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:02:30) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = (x**a)/(factorial(a)) - (-a)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-7.4293641144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:02:44) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = (x**a)/(factorial(a)) - (-a)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-7.4293641144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 18:03:33) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - (-a)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-7.4293641144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:19:04) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 0
while(v<k):
	calculo = ((x**a)/(factorial(a))) - (-a)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-9.429207272
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:19:26) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - (-a)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
-7.4293641144
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:23:59) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
0.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:24:15) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.16311
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.5706358856
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.5661145727
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.036703049
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:24:44) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - *(-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.169727
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 8
    calculo = ((x**a)/(factorial(a))) - *(-1)
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:24:44) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - *(-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- ERROR:
File "XXXX", line 8
    calculo = ((x**a)/(factorial(a))) - *(-1)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:24:49) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) - *(-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- ERROR:
File "XXXX", line 8
    calculo = ((x**a)/(factorial(a))) - *(-1)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:25:05) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:25:25) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:25:36) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.128991
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.5706358856
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.5661145727
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.036703049
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:25:44) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:26:01) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:26:36) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x + calculo
print(round(final, 10))
-- EXECUTION TIME:
0.12641
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.570956768
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.5754780809
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.0576920534
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:26:37) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x + calculo
print(round(final, 10))
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:26:47) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:41:51) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-1)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:42:15) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
while(v<k):
	calculo = - ((x**a)/(factorial(a))) * (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    calculo = - ((x**a)/(factorial(a))) * (-calculo)
NameError: name 'calculo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:45:57) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:46:07) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.148296
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.1417495522
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:46:58) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo =  ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
2.141589111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:47:11) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.150902
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.1417495522
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:47:12) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:47:20) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:47:38) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:47:53) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:48:24) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 35
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:55:36) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:55:55) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:56:19) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:56:38) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.128415
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.1417495522
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:57:05) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<=k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.223595
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
2.1415927098
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.0000035426
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.2283738307
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:57:09) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 17:57:10) 
-- CODE:
from math import *

x = eval(input())
k = eval(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.160271
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.1417495522
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:06:50) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v = 1
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.209737
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.1417495522
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:10:19) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 0
calculo = 0
while(v<k):
	calculo = - ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.22759
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
2.1415927098
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.0000035426
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.2283738307
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:11:51) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 0
calculo = 0
while(v<k):
	calculo = ((x**a)/(factorial(a))) + (-calculo)
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.171606
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
0.9999999437
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-2.141589111
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8660212717
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:14:02) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 0
calculo = 0
while(v<k):
	calculo = -((x**a)/(factorial(a))+((x**(a+2))/(factorial(a+2))
	v = v+1
	a= a+2
final = x - calculo
print(round(final, 10))
-- EXECUTION TIME:
0.136305
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 10
    v = v+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:18:14) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 1
calculo = 0
while(v<=k):
	if(v%2==0):
		calculo = -((x**a)/(factorial(a))
		v = v+1
		a= a+2
	else:
		calculo = +((x**a)/(factorial(a))
		v = v+1
		a= a+2				
final = x + calculo
print(round(final, 10))
-- EXECUTION TIME:
0.167586
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 11
    v = v+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:21) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 1
calculo = 0
while(v<=k):
	if(v%2==0):
		calculo = -((x**a)/(factorial(a))
		v = v+1
		a= a+2
	else:
		calculo = +((x**a)/(factorial(a))
		v = v+1
		a= a+2				
final = x + calculo
print(round(final, 10))
-- ERROR:
File "XXXX", line 11
    v = v+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:22:34) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 1
calculo = 0
while(v<=k):
	if(v%2==0):
		calculo = calculo - ((x**a)/(factorial(a))
		v = v+1
		a= a+2
	else:
		calculo = calculo+((x**a)/(factorial(a))
		v = v+1
		a= a+2				
final = x + calculo
print(round(final, 10))
-- ERROR:
File "XXXX", line 11
    v = v+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:23:35) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 1
calculo = 0
while(v<=k):
	if(v%2==0):
		calculo = calculo - ((x**a)/(factorial(a)))
		v = v+1
		a= a+2
	else:
		calculo = calculo+((x**a)/(factorial(a)))
		v = v+1
		a= a+2				
final = x + calculo
print(round(final, 10))
-- OUTPUT:
2.1415927098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:23:57) 
-- CODE:
from math import *

x = eval(input())
k = int(input())
a = 3
v= 1
calculo = 0
while(v<=k):
	if(v%2==0):
		calculo = calculo - ((x**a)/(factorial(a)))
		v = v+1
		a= a+2
	else:
		calculo = calculo+((x**a)/(factorial(a)))
		v = v+1
		a= a+2				
final = x + calculo
print(round(final, 10))
-- OUTPUT:
2.1415927098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:28) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo =((x**a)/factorial(a)) - (-calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
0.8402938089
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:28:57) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo =-((x**a)/factorial(a)) - (+calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
2.1415927098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:26) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = ((x**a)/factorial(a)) - (+calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
0.9999999437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:37) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = ((x**a)/factorial(a)) - (+calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
0.9999999437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:30:09) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = -((x**a)/factorial(a)) - (-calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
2.3012988447
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:30:53) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = -((x**a)/factorial(a)) *(-1)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:31:16) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = ((x**a)/factorial(a)) *(-1)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
1.5707999256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:49:50) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = ((x**a)/factorial(a)) *(-calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:15) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = ((x**a)/factorial(a)) *(-calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:50:46) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = ((x**a)/factorial(a)) +(-calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
0.9999999437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:51:04) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
calculo = 0
while(v<k):
	calculo = -((x**a)/factorial(a)) +(-calculo)
	a = a +2
	v = v+1
final = x - calculo
print(round(final,10))
-- OUTPUT:
2.1415927098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:27:05) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 0
a = 3
sinal = 1
calculo = 0
while(v<k):
	calculo = sinal + ((x**a)/factorial(a)) 
	a = a +2
	v = v+1
	sinal = sinal*(-1)
final = x - calculo
print(round(final,10))
-- OUTPUT:
0.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:27:30) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 1
a = 3
sinal = 1
calculo = 0
while(v<k):
	calculo = sinal + ((x**a)/factorial(a)) 
	a = a +2
	v = v+1
	sinal = sinal*(-1)
final = x - calculo
print(round(final,10))
-- OUTPUT:
2.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:27:40) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 1
a = 3
sinal = 1
calculo = 0
while(v<k):
	calculo = sinal * ((x**a)/factorial(a)) 
	a = a +2
	v = v+1
	sinal = sinal*(-1)
final = x - calculo
print(round(final,10))
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:39:47) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 1
a = 3
sinal = -1
calculo = x
while(v<k):
	calculo = calculo + (sinal * ((x**a)/factorial(a)))
	a = a +2
	v = v+1
	sinal = sinal*(-1)
#final = x - calculo
print(round(final,10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(final,10))
NameError: name 'final' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:40:00) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 1
a = 3
sinal = -1
calculo = x
while(v<k):
	calculo = calculo + (sinal * ((x**a)/factorial(a)))
	a = a +2
	v = v+1
	sinal = sinal*(-1)
#final = x - calculo
print(round(calculo,10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:40:06) 
-- CODE:
from math import *
x = eval(input())
k = int(input())
v = 1
a = 3
sinal = -1
calculo = x
while(v<k):
	calculo = calculo + (sinal * ((x**a)/factorial(a)))
	a = a +2
	v = v+1
	sinal = sinal*(-1)
#final = x - calculo
print(round(calculo,10))
-- EXECUTION TIME:
0.203585
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
